[package]
name = "libvpx"
version = "0.1.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "libvpx bindings"
repository = "https://github.com/rust-av/vpx-rs"
readme = "README.md"
keywords = ["libvpx","vp9"]

[features]
default = ["codec-trait"]
codec-trait = ["av-codec"]

[dependencies]
vpx-sys = { version = "0.1.1", path = "vpx-sys" }
av-data = { version = "0.3.0" }
av-codec = { version = "0.2.2", optional = true }

[workspace]
members = ["vpx-sys"]
