[package]
name = "vpx-sys"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to vpx"
repository = "https://github.com/rust-av/vpx-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.55"
system-deps = "2.0"

[package.metadata.system-deps]
vpx = "1.5.0"

[dependencies]
