[package]
name = "vpx-sys"
version = "0.1.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"
license = "MIT"
description = "FFI bindings to vpx"
repository = "https://github.com/rust-av/vpx-rs"

build = "build.rs"

[build-dependencies]
bindgen = "0.60"
system-deps = "6.0"

[package.metadata.system-deps]
vpx = "1.5.0"

[dependencies]
